[gd_scene load_steps=27 format=3 uid="uid://ccj15586diobm"]

[ext_resource type="Theme" uid="uid://dxlqjk13q05vx" path="res://ui_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://bfw7u03655r11" path="res://ui/pause.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dihom2two7x28" path="res://assets/godot_logo.png" id="3"]
[ext_resource type="Script" uid="uid://bjewxx2rva6s4" path="res://ui/map_name.gd" id="3_rj0dl"]
[ext_resource type="Script" uid="uid://c2ymrogvu7um7" path="res://ui/user_interface.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://cln1tidcuynt6" path="res://assets/minimap/maps/avocado-beach.png" id="5_hbfsb"]
[ext_resource type="Texture2D" uid="uid://cupbjntxilq6n" path="res://assets/minimap/minimap-overlay.svg" id="5_tg4xs"]
[ext_resource type="Texture2D" uid="uid://bnjp3erf87md0" path="res://assets/crystal green.png" id="6"]
[ext_resource type="Texture2D" uid="uid://do0d3kqunn7pt" path="res://assets/minimap/player-cursor.png" id="6_y76n1"]
[ext_resource type="PackedScene" uid="uid://c1uxp84cy3fxb" path="res://ui/settings.tscn" id="7"]
[ext_resource type="Script" uid="uid://dvvhyednxao0m" path="res://ui/dialog.gd" id="7_g3dh2"]
[ext_resource type="AudioStream" uid="uid://t55hiuj8ac0l" path="res://assets/zapsplat_multimedia_alert_musical_warm_finish_complete_success_004_64256.ogg" id="8"]
[ext_resource type="AudioStream" uid="uid://bjkiu68hnfn6a" path="res://assets/pan14_cheering-church-3.ogg" id="8_10biq"]
[ext_resource type="Texture2D" uid="uid://ckq7kecygm8wk" path="res://assets/minimap/minimap-mask.svg" id="9_3xw3k"]
[ext_resource type="FontFile" uid="uid://cjwtskrde6shl" path="res://assets/fonts/montserrat_extra_bold.ttf" id="14_ly17m"]

[sub_resource type="Animation" id="3"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -110)]
}

[sub_resource type="Animation" id="4"]
resource_name = "VISIBLE"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "hide_hud"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -110)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foux1"]
_data = {
&"RESET": SubResource("3"),
&"VISIBLE": SubResource("4"),
&"hide_hud": SubResource("2")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phqdm"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0, 0, 0.627451)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcement:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8")]
}

[sub_resource type="Animation" id="6"]
resource_name = "show_all_godot_heads_collected"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcement:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sb5q5"]
_data = {
&"RESET": SubResource("5"),
&"show_all_godot_heads_collected": SubResource("6")
}

[sub_resource type="Animation" id="Animation_ro15n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_10biq")]
}

[sub_resource type="Animation" id="Animation_qlut8"]
resource_name = "congratulations"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_10biq")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv28i"]
_data = {
&"RESET": SubResource("Animation_ro15n"),
&"congratulations": SubResource("Animation_qlut8")
}

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("5")

[node name="MapName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -141.0
offset_right = 265.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("14_ly17m")
theme_override_font_sizes/font_size = 48
text = "Avocado Beach"
horizontal_alignment = 1
script = ExtResource("3_rj0dl")

[node name="HUDAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_foux1")
}

[node name="HUDTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Minimap" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
scale = Vector2(0.7, 0.7)

[node name="Mask" type="TextureRect" parent="Minimap"]
modulate = Color(1, 1, 1, 0.784314)
clip_children = 2
layout_direction = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -345.0
offset_right = 345.0
grow_vertical = 0
texture = ExtResource("9_3xw3k")

[node name="MinimapPivot" type="Control" parent="Minimap/Mask"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="InnerMinimapPivot" type="Control" parent="Minimap/Mask/MinimapPivot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MapTexture" type="TextureRect" parent="Minimap/Mask/MinimapPivot/InnerMinimapPivot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -650.0
offset_top = -650.0
offset_right = 650.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hbfsb")

[node name="Overlay" type="TextureRect" parent="Minimap"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -345.0
offset_right = 345.0
grow_vertical = 0
texture = ExtResource("5_tg4xs")

[node name="PlayerCursorPivot" type="Control" parent="Minimap/Overlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerCursor" type="TextureRect" parent="Minimap/Overlay/PlayerCursorPivot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.5
offset_top = -172.5
offset_right = 172.5
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_y76n1")

[node name="Dialog" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_g3dh2")

[node name="PanelContainer" type="PanelContainer" parent="Dialog"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -255.0
offset_right = 368.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_phqdm")

[node name="DialogText" type="RichTextLabel" parent="Dialog/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hello! This is a dialog."

[node name="Pause" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.235294)

[node name="Submenus" type="Control" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Controls" type="VBoxContainer" parent="Pause/Submenus"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -225.0
offset_right = 350.0
offset_bottom = 225.0

[node name="TabContainer" type="TabContainer" parent="Pause/Submenus/Controls"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
current_tab = 0

[node name="Controls" type="TabBar" parent="Pause/Submenus/Controls/TabContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Pause/Submenus/Controls/TabContainer/Controls"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Text" type="Label" parent="Pause/Submenus/Controls/TabContainer/Controls/ScrollContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
text = "Walk – WASD
Jump – Space
Sprint – Shift
Spin Attack – Left Mouse Click
Mid-Air Dash – Jump + Shift
Body Slam – Double Jump + Right Mouse Click

Show HUD – TAB
Pause – ESC
Toggle Fullscreen – Alt+Enter"

[node name="BackButton" type="Button" parent="Pause/Submenus/Controls"]
layout_mode = 2
text = "Back"

[node name="Settings" parent="Pause/Submenus" instance=ExtResource("7")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Progress" type="VBoxContainer" parent="Pause/Submenus"]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -175.0
offset_right = 350.0
offset_bottom = 175.0

[node name="TabContainer" type="TabContainer" parent="Pause/Submenus/Progress"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
current_tab = 0

[node name="World3D 1" type="TabBar" parent="Pause/Submenus/Progress/TabContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Pause/Submenus/Progress/TabContainer/World3D 1"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="World1Progress" type="Label" parent="Pause/Submenus/Progress/TabContainer/World3D 1/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hello, World3D!
Hello, World3D!"

[node name="BackButton" type="Button" parent="Pause/Submenus/Progress"]
layout_mode = 2
text = "Back"

[node name="PauseMenu" type="VBoxContainer" parent="Pause"]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -243.5
offset_right = 285.0
offset_bottom = 243.5
alignment = 1

[node name="ResumeButton" type="Button" parent="Pause/PauseMenu"]
layout_mode = 2
text = "Resume"

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressButton" type="Button" parent="Pause/PauseMenu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Progress: 0.00%"

[node name="ControlsButton" type="Button" parent="Pause/PauseMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controls"

[node name="SettingsButton" type="Button" parent="Pause/PauseMenu"]
layout_mode = 2
text = "Settings"

[node name="UpgradesContainer" type="VBoxContainer" parent="Pause/PauseMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/PauseMenu/UpgradesContainer"]
layout_mode = 2

[node name="DoubleJumpContainer" type="HBoxContainer" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DoubleJumpCheckButton" type="CheckButton" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer/DoubleJumpContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DoubleJumpLabel" type="Label" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer/DoubleJumpContainer"]
layout_mode = 2
text = "Double Jump"

[node name="MidAirDashContainer" type="HBoxContainer" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MidAirDashCheckButton" type="CheckButton" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer/MidAirDashContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MidAirDashLabel" type="Label" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer/MidAirDashContainer"]
layout_mode = 2
text = "Mid-Air Dash"

[node name="HBoxContainer2" type="HBoxContainer" parent="Pause/PauseMenu/UpgradesContainer"]
layout_mode = 2

[node name="BodySlamContainer" type="HBoxContainer" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer2"]
layout_mode = 2

[node name="BodySlamCheckButton" type="CheckButton" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer2/BodySlamContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BodySlamLabel" type="Label" parent="Pause/PauseMenu/UpgradesContainer/HBoxContainer2/BodySlamContainer"]
layout_mode = 2
text = "Body Slam"

[node name="RestartMapButton" type="Button" parent="Pause/PauseMenu"]
layout_mode = 2
text = "Restart Map"

[node name="HBoxContainer2" type="HBoxContainer" parent="Pause/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleScreenButton" type="Button" parent="Pause/PauseMenu/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Return to Title Screen"

[node name="ExitButton" type="Button" parent="Pause/PauseMenu/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="HUD" type="Control" parent="."]
anchors_preset = 0
offset_top = -110.0
offset_right = 40.0
offset_bottom = -70.0

[node name="ScoreSprite" type="Sprite2D" parent="HUD"]
position = Vector2(10, 10)
scale = Vector2(0.0816667, 0.0816667)
texture = ExtResource("3")
centered = false

[node name="ScoreLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 65.0
offset_top = 20.0
offset_right = 121.0
offset_bottom = 51.0
text = "0 / 0"

[node name="CrystalGreen" type="Sprite2D" parent="HUD"]
position = Vector2(10, 60)
scale = Vector2(0.16, 0.16)
texture = ExtResource("6")
centered = false

[node name="GemLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 65.0
offset_top = 70.0
offset_right = 81.0
offset_bottom = 101.0
text = "0"

[node name="Announcement" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
text = "100% Godot Heads collected"
horizontal_alignment = 1

[node name="AnnouncementAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sb5q5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_10biq")
bus = &"Sound"

[node name="CongratulationsDialog" type="AcceptDialog" parent="."]
process_mode = 3
title = "Congratulations"
size = Vector2i(1045, 140)
dialog_text = "You've achieved 100% completion in the demo! Thank you so much for playing!  Feel free to leave your feedback in our GitHub page. :)"
dialog_autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CongratulationsDialog"]
root_node = NodePath("../../AnnouncementAnimationPlayer")
libraries = {
&"": SubResource("AnimationLibrary_wv28i")
}

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -47.0
offset_right = 104.0
text = "FPS: 0"

[connection signal="timeout" from="HUDTimer" to="." method="hide_hud"]
[connection signal="pressed" from="Pause/Submenus/Controls/BackButton" to="Pause" method="return_to_pause_menu"]
[connection signal="back_button_pressed" from="Pause/Submenus/Settings" to="Pause" method="return_to_pause_menu"]
[connection signal="unpause" from="Pause/Submenus/Settings" to="Pause" method="pause"]
[connection signal="pressed" from="Pause/Submenus/Progress/BackButton" to="Pause" method="return_to_pause_menu"]
[connection signal="pressed" from="Pause/PauseMenu/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/PauseMenu/HBoxContainer/ProgressButton" to="Pause" method="open_submenu" binds= ["%Progress"]]
[connection signal="pressed" from="Pause/PauseMenu/HBoxContainer/ControlsButton" to="Pause" method="open_submenu" binds= ["%Controls"]]
[connection signal="pressed" from="Pause/PauseMenu/SettingsButton" to="Pause" method="open_submenu" binds= ["%Settings"]]
[connection signal="toggled" from="Pause/PauseMenu/UpgradesContainer/HBoxContainer/DoubleJumpContainer/DoubleJumpCheckButton" to="Pause" method="_on_DoubleJumpCheckButton_toggled"]
[connection signal="toggled" from="Pause/PauseMenu/UpgradesContainer/HBoxContainer/MidAirDashContainer/MidAirDashCheckButton" to="Pause" method="_on_MidAirDashCheckButton_toggled"]
[connection signal="toggled" from="Pause/PauseMenu/UpgradesContainer/HBoxContainer2/BodySlamContainer/BodySlamCheckButton" to="Pause" method="_on_BodySlamCheckButton_toggled"]
[connection signal="pressed" from="Pause/PauseMenu/RestartMapButton" to="Pause" method="_on_RestartMapButton_pressed"]
[connection signal="pressed" from="Pause/PauseMenu/HBoxContainer2/TitleScreenButton" to="Pause" method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Pause/PauseMenu/HBoxContainer2/ExitButton" to="Pause" method="_on_ExitButton_pressed"]
[connection signal="canceled" from="CongratulationsDialog" to="." method="_on_congratulations_dialog_confirmed"]
[connection signal="confirmed" from="CongratulationsDialog" to="." method="_on_congratulations_dialog_confirmed"]
